# boiler_inspection_robot

./: .gitignore  README.md
boiler_inspection_robot_controller/: CMakeLists.txt  README.md  package.xml
boiler_inspection_robot_controller/launch/: boiler_inspection_robot_controller.launch  teleop_keyboard.launch
boiler_inspection_robot_controller/src/: boiler_inspection_robot_controller_node.py
boiler_inspection_robot_description/: CMakeLists.txt  README.md  package.xml
boiler_inspection_robot_description/config/: boiler_inspection_robot_control.yaml  boiler_inspection_robot_control_wheels.yaml
boiler_inspection_robot_description/launch/: boiler_inspection_robot_control_wheels.launch  gazebo.launch  main.launch  spawn_boiler_inspection_robot.launch  spawn_urdf.launch  visualize_in_rviz.launch
boiler_inspection_robot_description/rviz_config/: urdf_visu.rviz
boiler_inspection_robot_description/urdf/: boiler_inspection_robot.urdf
boiler_inspection_robot_navigation/: CMakeLists.txt  README.md  package.xml
boiler_inspection_robot_navigation/config/: costmap_common.yaml
boiler_inspection_robot_navigation/launch/: amcl.launch  gmapping.launch  laser_scan_matcher.launch  move_base.launch  start_odom.launch
boiler_inspection_robot_navigation/src/: simulated_odometry.py
boiler_inspection_robot_simulation/: CMakeLists.txt  README.md  package.xml
boiler_inspection_robot_simulation/launch/: gazebo.launch  gazebo_with_spawned_robot.launch  spawn_boiler_inspection_robot.launch  spawn_urdf.launch
