<?xml version="1.0"?>
<package format="2">
  <name>boiler_inspection_robot_controller</name>
  <version>1.0.0</version>
  <description>The boiler_inspection_robot_controller package</description>

  <maintainer email="pawel.irzyk6@gmail.com">Paweł Irzyk</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

</package>
